# embed-text-reducer

./: .gitignore  README.md  pyproject.toml  setup.cfg
