[metadata]
name = embed-text-reducer
version = 0.1.0
author = Danil Emelianov 
author_email = d.emelianov1991@gmail.com
description = A simple text simplification tool using advanced NLP techniques.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brokencop23/embed-text-reducer.git 
project_urls =
    Bug Tracker = https://github.com/brokencop23/embed-text-reducer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Text Processing :: Linguistic

[options]
package_dir =
    = embed_text_reducer
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    tiktoken
    sentence-transformers
    scikit-learn

[options.packages.find]
where = embeded_text_reducer

[options.extras_require]
dev =
    pytest>=3.7
    check-manifest
    twine

[options.package_data]
text_simplifier = py.typed

[bdist_wheel]
universal = 1
